ajustar los index
ajustar los index de todas las paginas

--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -13,7 +13,7 @@
  <header class="hero">
     <nav class="navbar">
       <div class="logo">
-      <a href="/HTML/index.html">GeovannyDev</a></div>
+      <a href="/index.html">GeovannyDev</a></div>
  <div class="titulo-pagina">
        <a href="/HTML/contacto.html">CONTACTO</a>
        </div>
@@ -26,7 +26,7 @@
   </button>
    
   <ul class="dropdown-menu" aria-label="submenu">
-    <li><a href="/HTML/index.html">Inicio</a></li>
+    <li><a href="index.html">Inicio</a></li>
     <li><a href="/HTML/sobremi.html">Sobre mí</a></li>
     <li><a href="/HTML/hobbies.html">Hobbies</a></li>
     <li><a href="/HTML/proyectos.html">Proyectos</a></li>
