--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <header class="hero">
     <nav class="navbar">
       <div class="logo">
-      <a href="/HTML/index.html">GeovannyDev</a></div>
+      <a href="/index.html">GeovannyDev</a></div>
        <!-- Menú desplegable para mobile o como alternativa -->
 <div class="buscador">
   <input type="text" id="buscador" placeholder="Buscar..."/>
@@ -36,7 +36,7 @@
     <img src="/Imagenes/fotoMenu2.png" alt="Menú" class="menu-icon"> 
   </button>
   <ul class="dropdown-menu" aria-label="submenu">
-    <li><a href="/HTML/index.html">Inicio</a></li>
+    <li><a href="index.html">Inicio</a></li>
     <li><a href="/HTML/sobremi.html">Sobre mí</a></li>
     <li><a href="/HTML/hobbies.html">Hobbies</a></li>
     <li><a href="/HTML/proyectos.html">Proyectos</a></li>
