--- a/HTML/sobremi.html
+++ b/HTML/sobremi.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Geovanny Jimenez Briceño- Portfolio Personal</title>
-  <link rel="stylesheet" href="/Styles/styles2.css" />
-  <link rel="stylesheet" href="/Styles/stylesMenu.css">
-  <link rel="stylesheet" href="/Styles/stylesSobreMiPagina.css">
+  <link rel="stylesheet" href="Styles/styles2.css" />
+  <link rel="stylesheet" href="Styles/stylesMenu.css">
+  <link rel="stylesheet" href="Styles/stylesSobreMiPagina.css">
 
 </head>
 <body>
