--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
   <title>Geovanny Jiménez Briceño - Portfolio Personal</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
  
-  <link rel="stylesheet" href="Styles/styles2.css" />
-  <link rel="stylesheet" href="Styles/stylesSobreMi.css" />
-  <link rel="stylesheet" href="Styles/stylesHobbiesCard.css" />
-  <link rel="stylesheet" href="Styles/Circulo.css" />
-  <link rel="stylesheet" href="Styles/stylesProyectos.css" />
-  <link rel="stylesheet" href="Styles/stylesContactoPrincipal.css" />
-  <link rel="stylesheet" href="Styles/stylesMenu.css">
+  <link rel="stylesheet" href="/Styles/styles2.css" />
+  <link rel="stylesheet" href="/Styles/stylesSobreMi.css" />
+  <link rel="stylesheet" href="/Styles/stylesHobbiesCard.css" />
+  <link rel="stylesheet" href="/Styles/stylesProyectos.css" />
+  <link rel="stylesheet" href="/Styles/stylesContactoPrincipal.css" />
+  <link rel="stylesheet" href="/Styles/stylesMenu.css">
 
 
 </head>
@@ -33,7 +32,7 @@
  <script src="/JavaScript/buscador.js"></script>
   <div class="dropdown">
   <button class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
-    <img src="/Imagenes/fotoMenu2.png" alt="Menú" class="menu-icon"> 
+    <img src="/Imagenes/fotoMenu.png" alt="Menú" class="menu-icon"> 
   </button>
   <ul class="dropdown-menu" aria-label="submenu">
     <li><a href="index.html">Inicio</a></li>
