--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         Cada experiencia es una oportunidad para crecer, aprender y
         descubrir lo mejor de la vida.
       </p>
-      <a href="hobbies.html" class="enlaces">Leer más</a>
+      <a href="/HTML/hobbies.html" class="enlaces">Leer más</a>
     </div>
   </div>
 </section>
@@ -144,7 +144,7 @@
         <div class="proyecto">🎮 Juego: Tres en Raya</div>
         
       </div>
-      <a href="proyectos.html" class="enlaces-proyectos">Leer más</a>
+      <a href="/HTML/proyectos.html" class="enlaces-proyectos">Leer más</a>
         </div>
     </section>
 
