--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
 
 </head>
 <body class="fondo-animado">
-  <script src="/JavaScript/scroll2.js"></script>
+  <script src="JavaScript/scroll2.js"></script>
   <div id="vantajs-fog"></div>
   <header class="hero">
     <nav class="navbar">
       <div class="logo">
-      <a href="/index.html">GeovannyDev</a></div>
+      <a href="index.html">GeovannyDev</a></div>
        <!-- Menú desplegable para mobile o como alternativa -->
 <div class="buscador">
   <input type="text" id="buscador" placeholder="Buscar..."/>
   <ul id="busca-sugerencias">
   </ul>
 </div>
- <script src="/JavaScript/buscador.js"></script>
+ <script src="JavaScript/buscador.js"></script>
   <div class="dropdown">
   <button class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
-    <img src="/Imagenes/fotoMenu.png" alt="Menú" class="menu-icon"> 
+    <img src="Imagenes/fotoMenu.png" alt="Menú" class="menu-icon"> 
   </button>
   <ul class="dropdown-menu" aria-label="submenu">
     <li><a href="index.html">Inicio</a></li>
-    <li><a href="/HTML/sobremi.html">Sobre mí</a></li>
-    <li><a href="/HTML/hobbies.html">Hobbies</a></li>
-    <li><a href="/HTML/proyectos.html">Proyectos</a></li>
-    <li><a href="/HTML/contacto.html">Contacto</a></li>
+    <li><a href="HTML/sobremi.html">Sobre mí</a></li>
+    <li><a href="HTML/hobbies.html">Hobbies</a></li>
+    <li><a href="HTML/proyectos.html">Proyectos</a></li>
+    <li><a href="HTML/contacto.html">Contacto</a></li>
   </ul>
 </div>
     </nav>
@@ -56,7 +56,7 @@
     <div  id="spline-container"  class="objeto-3d">
       <!-- 1) Cargar el componente desde CDN -->
       <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.96/build/spline-viewer.js"></script>
-      <script type="module" src="/JavaScript/fallbackObjeto3d.js"></script>
+      <script type="module" src="JavaScript/fallbackObjeto3d.js"></script>
       <!-- 2) El custom element -->
      
     </div>
@@ -119,7 +119,7 @@
         Cada experiencia es una oportunidad para crecer, aprender y
         descubrir lo mejor de la vida.
       </p>
-      <a href="/HTML/hobbies.html" class="enlaces">Leer más</a>
+      <a href="HTML/hobbies.html" class="enlaces">Leer más</a>
     </div>
   </div>
 </section>
@@ -144,7 +144,7 @@
         <div class="proyecto">🎮 Juego: Tres en Raya</div>
         
       </div>
-      <a href="/HTML/proyectos.html" class="enlaces-proyectos">Leer más</a>
+      <a href="HTML/proyectos.html" class="enlaces-proyectos">Leer más</a>
         </div>
     </section>
 
@@ -180,7 +180,7 @@
 <script src="https://kit.fontawesome.com/a2e0e6f0a8.js" crossorigin="anonymous"></script>
 
 
-<script src="/JavaScript/animacionMenu.js"></script>
+<script src="JavaScript/animacionMenu.js"></script>
 
 
 </body>
