--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Geovanny Jimenez Briceño- Portfolio Personal</title>
-  <link rel="stylesheet" href="/Styles/stylesCoctacto.css" />
-  <link rel="stylesheet" href="/Styles/styles2.css" />
-    <link rel="stylesheet" href="/Styles/stylesMenu.css">
+  <link rel="stylesheet" href="../Styles/stylesCoctacto.css" />
+  <link rel="stylesheet" href="../Styles/styles2.css" />
+    <link rel="stylesheet" href="../Styles/stylesMenu.css">
 </head>
 <body>
  <header class="hero">
@@ -15,27 +15,27 @@
       <div class="logo">
       <a href="/index.html">GeovannyDev</a></div>
  <div class="titulo-pagina">
-       <a href="/HTML/contacto.html">CONTACTO</a>
+       <a href="contacto.html">CONTACTO</a>
        </div>
 
 
        <!-- Menú desplegable para mobile o como alternativa -->
   <div class="dropdown">
   <button class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
-    <img src="/Imagenes/fotoMenu2.png" alt="Menú" class="menu-icon"> 
+    <img src="../Imagenes/fotoMenu2.png" alt="Menú" class="menu-icon"> 
   </button>
    
   <ul class="dropdown-menu" aria-label="submenu">
-    <li><a href="index.html">Inicio</a></li>
-    <li><a href="/HTML/sobremi.html">Sobre mí</a></li>
-    <li><a href="/HTML/hobbies.html">Hobbies</a></li>
-    <li><a href="/HTML/proyectos.html">Proyectos</a></li>
-    <li><a href="/HTML/contacto.html">Contacto</a></li>
+    <li><a href="/index.html">Inicio</a></li>
+    <li><a href="sobremi.html">Sobre mí</a></li>
+    <li><a href="hobbies.html">Hobbies</a></li>
+    <li><a href="proyectos.html">Proyectos</a></li>
+    <li><a href="contacto.html">Contacto</a></li>
   </ul>
 </div>
     </nav>
     </header>
-    <script src="/JavaScript/animacionMenu.js"></script>
+    <script src="../JavaScript/animacionMenu.js"></script>
    
 </header>
 <main class="container">
