--- a/HTML/proyectos.html
+++ b/HTML/proyectos.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Geovanny Jimenez Briceño- Portfolio Personal</title>
-  <link rel="stylesheet" href="/Styles/styles2.css" />
-    <link rel="stylesheet" href="/Styles/stylesMenu.css">
-    <link rel="stylesheet" href="/Styles/stylesProyectoPagina.css">
+  <link rel="stylesheet" href="../Styles/styles2.css" />
+    <link rel="stylesheet" href="../Styles/stylesMenu.css">
+    <link rel="stylesheet" href="../Styles/stylesProyectoPagina.css">
 </head>
 <header>
     <header class="hero">
@@ -15,25 +15,25 @@
       <div class="logo">
       <a href="/index.html">GeovannyDev</a></div>
       <div class="titulo-pagina">
-       <a href="/HTML/proyectos.html">PROYECTOS</a>
+       <a href="proyectos.html">PROYECTOS</a>
        </div>
 
        <!-- Menú desplegable-->
   <div class="dropdown">
   <button class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
-    <img src="/Imagenes/fotoMenu2.png" alt="Menú" class="menu-icon"> 
+    <img src="../Imagenes/fotoMenu2.png" alt="Menú" class="menu-icon"> 
   </button>
   <ul class="dropdown-menu" aria-label="submenu">
-    <li><a href="index.html">Inicio</a></li>
-    <li><a href="/HTML/sobremi.html">Sobre mí</a></li>
-    <li><a href="/HTML/hobbies.html">Hobbies</a></li>
-    <li><a href="/HTML/proyectos.html">Proyectos</a></li>
-    <li><a href="/HTML/contacto.html">Contacto</a></li>
+    <li><a href="/index.html">Inicio</a></li>
+    <li><a href="sobremi.html">Sobre mí</a></li>
+    <li><a href="hobbies.html">Hobbies</a></li>
+    <li><a href="proyectos.html">Proyectos</a></li>
+    <li><a href="contacto.html">Contacto</a></li>
   </ul>
 </div>
     </nav>
     </header>
-    <script src="/JavaScript/animacionMenu.js"></script>
+    <script src="../JavaScript/animacionMenu.js"></script>
 </header>
 <body>
   <main>
@@ -46,8 +46,8 @@
           así como para desarrollar habilidades en programación y diseño de interfaces.
         </p>
         <div class="proyect-image">
-          <img  class="logoJava efecto3d" src="/Imagenes/logoJava.png" alt="Logo Java" />
-          <img class="logoSql efecto3d" src="/Imagenes/logossql.png" alt="Logo SQL" />
+          <img  class="logoJava efecto3d" src="../Imagenes/logoJava.png" alt="Logo Java" />
+          <img class="logoSql efecto3d" src="../Imagenes/logossql.png" alt="Logo SQL" />
         </div>
       </article>
     </section>
@@ -60,8 +60,8 @@
           Es una excelente manera de aprender sobre la lógica de programación y la creación de juegos simples.
         </p>
         <div class="proyect-image">
-          <img  class="logoJava efecto3d" src="/Imagenes/logoJava.png" alt="Logo Java" />
-          <img class="logoSql efecto3d" src="/Imagenes/logossql.png" alt="Logo SQL" />
+          <img  class="logoJava efecto3d" src="../Imagenes/logoJava.png" alt="Logo Java" />
+          <img class="logoSql efecto3d" src="../Imagenes/logossql.png" alt="Logo SQL" />
         </div>
       </article>
     </section>
@@ -73,10 +73,10 @@
           El objetivo era crear una página web interactiva y visualmente atractiva que pudiera servir como portafolio personal.
         </p>
         <div class="proyect-image">
-          <img class="logoSql efecto3d" src="/Imagenes/logossql.png" alt="Logo SQL" />
-          <img class="logoHtml efecto3d" src="/Imagenes/logoHtml.png" alt="Logo HTML" />
-          <img class="logoCss efecto3d" src="/Imagenes/logoCss.png" alt="Logo CSS" />
-          <img class="logoJs efecto3d" src="/Imagenes/logoJs.png" alt="Logo JavaScript" />
+          <img class="logoSql efecto3d" src="../Imagenes/logossql.png" alt="Logo SQL" />
+          <img class="logoHtml efecto3d" src="../Imagenes/logoHtml.png" alt="Logo HTML" />
+          <img class="logoCss efecto3d" src="../Imagenes/logoCss.png" alt="Logo CSS" />
+          <img class="logoJs efecto3d" src="../Imagenes/logoJs.png" alt="Logo JavaScript" />
         </div>
       </article>
     </section>
@@ -84,7 +84,7 @@
   <footer>
     <p>&copy; 2025 Geovanny Jiménez | Proyecto Final de IT</p>
   </footer>
-  <script src="/JavaScript/animacion3d.js"></script>
+  <script src="../JavaScript/animacion3d.js"></script>
   </body>
   </html>
 
