--- a/HTML/sobremi.html
+++ b/HTML/sobremi.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Geovanny Jimenez Briceño- Portfolio Personal</title>
-  <link rel="stylesheet" href="/Styles/styles2.css" />
-  <link rel="stylesheet" href="/Styles/stylesMenu.css">
-  <link rel="stylesheet" href="/Styles/stylesSobreMiPagina.css">
+  <link rel="stylesheet" href="../Styles/styles2.css" />
+  <link rel="stylesheet" href="../Styles/stylesMenu.css">
+  <link rel="stylesheet" href="../Styles/stylesSobreMiPagina.css">
 
 </head>
 <body>
@@ -15,25 +15,25 @@
       <div class="logo">
       <a href="/index.html">GeovannyDev</a></div>
       <div class="titulo-pagina">
-       <a href="HTML/sobremi.html">SOBRE MÍ</a>
+       <a href="sobremi.html">SOBRE MÍ</a>
        </div>
 
        <!-- Menú desplegable-->
   <div class="dropdown">
   <button class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
-    <img src="/Imagenes/fotoMenu2.png" alt="Menú" class="menu-icon"> 
+    <img src="../Imagenes/fotoMenu2.png" alt="Menú" class="menu-icon"> 
   </button>
   <ul class="dropdown-menu" aria-label="submenu">
-    <li><a href="index.html">Inicio</a></li>
-    <li><a href="/HTML/sobremi.html">Sobre mí</a></li>
-    <li><a href="/HTML/hobbies.html">Hobbies</a></li>
-    <li><a href="/HTML/proyectos.html">Proyectos</a></li>
-    <li><a href="/HTML/contacto.html">Contacto</a></li>
+    <li><a href="/index.html">Inicio</a></li>
+    <li><a href="sobremi.html">Sobre mí</a></li>
+    <li><a href="hobbies.html">Hobbies</a></li>
+    <li><a href="proyectos.html">Proyectos</a></li>
+    <li><a href="contacto.html">Contacto</a></li>
   </ul>
 </div>
     </nav>
     </header>
-    <script src="/JavaScript/animacionMenu.js"></script>
+    <script src="../JavaScript/animacionMenu.js"></script>
 
 <h2 class="subTitulo">¿Quien Soy?</h2>
 <main>
@@ -48,7 +48,7 @@ y disfruto aprendiendo constantemente sobre nuevas herramientas, lenguajes de pr
 </section>
 <div>
  
-  <img class="sobremi1 animated-image" src="/Imagenes/logosss.png" alt="Imagen de Sobre mí">
+  <img class="sobremi1 animated-image" src="../Imagenes/logosss.png" alt="Imagen de Sobre mí">
   </div>
 </div>
 <section class="second-article">
@@ -62,7 +62,7 @@ y equilibrada.
 </article>
 </section>
 <div>
- <img class="sobremi2 animated-image" src="/Imagenes/lago.jpg" alt="Imagen de Sobre mí">
+ <img class="sobremi2 animated-image" src="../Imagenes/lago.jpg" alt="Imagen de Sobre mí">
  
   </div>
 </div>
@@ -72,7 +72,7 @@ y equilibrada.
     <p>&copy; 2025 Geovanny Jiménez | Proyecto Final de IT</p>
   </footer>
  
-  <script src="/JavaScript/animacionScroll.js"></script>
+  <script src="../JavaScript/animacionScroll.js"></script>
   
 </body>
 </html>
